feat(java-notes): fill in complete content for 12 modules
- 01-basics: 8 topics, 10 interview Q&A
- 02-oop: 10 topics, vtable / PECS covered
- 03-collections: HashMap source, ConcurrentHashMap 1.7 vs 1.8
- 04-concurrency: synchronized lock upgrade, AQS, ThreadLocal
- 05-jvm: GC algorithms, class loading, tuning
- 06-io-nio: BIO/NIO/AIO, Reactor, zero-copy
- 07-netty: architecture, codec, heartbeat
- 08-spring: IoC, AOP, transactions, Cloud Alibaba
- 09-mysql: B+ tree, MVCC, locks, Explain
- 10-redis: data structures, persistence, cluster
- 11-mq: RabbitMQ + Kafka, idempotency, distributed transaction
- 12-patterns: 23 GoF patterns with Spring/JDK examples